--- a/SharedComponents/TaskList.razor
+++ b/SharedComponents/TaskList.razor
@@ -30,7 +30,7 @@
             </tr>
             </thead>
             <tbody>
-            @foreach (var task in _allTasks)
+            @foreach (var task in _allTasks.Items)
             {
                 <tr>
                     <td>@task.Name</td>
