--- a/TimeManagementClient/Shared/NavMenu.razor
+++ b/TimeManagementClient/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> My tasks
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="weather">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather
+            </NavLink>
+        </li>
     </ul>
 </div>
 
